--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_graph"
     app:startDestination="@id/searchFragment">
-
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.lod.rtviwe.tport.search.SearchFragment"
@@ -27,40 +26,10 @@
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.lod.rtviwe.tport.profile.ProfileFragment"
-        android:label="ProfileFragment" />
-    <fragment
-        android:id="@+id/registerStepOneFragment"
-        android:name="com.lod.rtviwe.tport.profile.registration.RegisterStepOneFragment"
-        android:label="RegisterStepOneFragment">
+        android:label="ProfileFragment">
         <action
-            android:id="@+id/action_registerStepOneFragment_to_registerStepTwoFragment"
-            app:destination="@id/registerStepTwoFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-    </fragment>
-    <fragment
-        android:id="@+id/registerStepTwoFragment"
-        android:name="com.lod.rtviwe.tport.profile.registration.RegisterStepTwoFragment"
-        android:label="RegisterStepTwoFragment">
-        <action
-            android:id="@+id/action_registerStepTwoFragment_to_registerStepThreeFragment"
-            app:destination="@id/registerStepThreeFragment"
-            app:launchSingleTop="true"
-            app:popUpTo="@+id/main_graph"
-            app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/registerStepThreeFragment"
-        android:name="com.lod.rtviwe.tport.profile.registration.RegisterStepThreeFragment"
-        android:label="RegisterStepThreeFragment">
-        <action
-            android:id="@+id/action_registerStepThreeFragment_to_profileFragment"
-            app:destination="@id/profileFragment"
-            app:launchSingleTop="true"
-            app:popUpTo="@+id/main_graph"
-            app:popUpToInclusive="true" />
+            android:id="@+id/action_profileFragment_to_registration"
+            app:destination="@id/navigationRegistration" />
     </fragment>
     <fragment
         android:id="@+id/searchTripsFragment"
@@ -74,4 +43,53 @@
         android:id="@+id/tripDetailsFragment"
         android:name="com.lod.rtviwe.tport.tripdetails.TripDetailsFragment"
         android:label="TripDetailsFragment" />
+    <navigation
+        android:id="@+id/navigationRegistration"
+        app:startDestination="@id/registerStepOneFragment">
+        <fragment
+            android:id="@+id/registerStepTwoFragment"
+            android:name="com.lod.rtviwe.tport.profile.registration.RegisterStepTwoFragment"
+            android:label="RegisterStepTwoFragment">
+            <action
+                android:id="@+id/action_registerStepTwoFragment_to_registerStepThreeFragment"
+                app:destination="@id/registerStepThreeFragment"
+                app:popUpTo="@+id/main_graph" />
+        </fragment>
+        <fragment
+            android:id="@+id/registerStepThreeFragment"
+            android:name="com.lod.rtviwe.tport.profile.registration.RegisterStepThreeFragment"
+            android:label="RegisterStepThreeFragment">
+            <action
+                android:id="@+id/action_registerStepThreeFragment_to_profileFragment"
+                app:destination="@id/profileFragment"
+                app:popUpTo="@+id/main_graph" />
+        </fragment>
+        <fragment
+            android:id="@+id/registerStepOneFragment"
+            android:name="com.lod.rtviwe.tport.profile.registration.RegisterStepOneFragment"
+            android:label="RegisterStepOneFragment">
+            <action
+                android:id="@+id/action_registerStepOneFragment_to_registerStepTwoFragment"
+                app:destination="@+id/registerStepTwoFragment" />
+        </fragment>
+        <action
+            android:id="@+id/action_global_profileFragment"
+            app:destination="@id/profileFragment" />
+        <!--
+            app:launchSingleTop="true"
+            app:popUpToInclusive="true"
+            -->
+    </navigation>
+    <action
+        android:id="@+id/action_global_searchFragment"
+        app:destination="@id/searchFragment" />
+    <action
+        android:id="@+id/action_global_bonusesFragment"
+        app:destination="@id/bonusesFragment" />
+    <action
+        android:id="@+id/action_global_ordersFragment"
+        app:destination="@id/ordersFragment" />
+    <action
+        android:id="@+id/action_global_navigation"
+        app:destination="@id/navigationRegistration" />
 </navigation>
