--- a/app/src/main/res/values/styles_button.xml
+++ b/app/src/main/res/values/styles_button.xml
@@ -30,4 +30,8 @@
         <item name="android:typeface">sans</item>
     </style>
 
+    <style name="ToggleButtonFilter" parent="Theme.MaterialComponents.Light">
+        <!-- TODO -->
+    </style>
+
 </resources>
