--- a/app/src/main/res/drawable/extended_fab_background.xml
+++ b/app/src/main/res/drawable/extended_fab_background.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
-    <stroke
-            android:width="1dp"
-            android:color="@color/colorStroke"/>
-    <corners android:radius="8dp"/>
-    <solid android:color="@color/colorAccent"/>
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?android:colorControlHighlight">
+    <item>
+        <shape android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="@color/colorStroke" />
+            <corners android:radius="8dp" />
+            <solid android:color="@color/colorAccent" />
+        </shape>
+    </item>
+</ripple>
