--- a/app/src/main/res/layout/current_order_item.xml
+++ b/app/src/main/res/layout/current_order_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_order_item"
+    android:id="@+id/card_trip_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -12,6 +12,7 @@
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
+    android:translationZ="2dp"
     app:cardCornerRadius="8dp">
 
     <androidx.recyclerview.widget.RecyclerView
