--- a/app/src/main/res/layout/filter_bottom_sheet.xml
+++ b/app/src/main/res/layout/filter_bottom_sheet.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/filter_bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="340dp"
@@ -30,14 +29,18 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:checked="true"
-            android:text="@string/one_direction" />
+            android:textOff="@string/one_direction"
+            android:textOn="@string/one_direction"
+            android:theme="@style/ToggleButtonFilter" />
 
         <ToggleButton
             android:id="@+id/button_both_direction"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/both_directions" />
+            android:textOff="@string/both_directions"
+            android:textOn="@string/both_directions"
+            android:theme="@style/ToggleButtonFilter" />
 
     </LinearLayout>
 
@@ -168,11 +171,11 @@
         android:id="@+id/text_view_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/duration_trip"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="@string/duration_trip"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seek_bar_comfort"/>
+        app:layout_constraintTop_toBottomOf="@+id/seek_bar_comfort" />
 
     <SeekBar
         android:id="@+id/seek_bar_duration"
