--- a/app/src/main/res/layout/register_step_three_fragment.xml
+++ b/app/src/main/res/layout/register_step_three_fragment.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scroll_view_step_three"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -11,11 +12,11 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_enter_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="128dp"
+            android:layout_marginEnd="32dp"
             android:hint="@string/hint_name"
             android:minWidth="128dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -24,18 +25,23 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_register_step_three_continue"
-            style="@style/ButtonContinue"
-            android:layout_width="wrap_content"
+            style="@style/ExtendedFab"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/button_continue"
+            android:background="@drawable/extended_fab_background"
+            android:clickable="true"
+            android:focusable="true"
+            android:text="@string/extended_fab_confirm"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_name" />
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
