--- a/app/src/main/res/layout/coming_order_item.xml
+++ b/app/src/main/res/layout/coming_order_item.xml
@@ -9,7 +9,10 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="8dp"
+    android:clickable="true"
+    android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="vertical"
     android:translationZ="2dp"
     app:cardCornerRadius="8dp">
 
