--- a/app/src/main/res/layout/register_step_two_fragment.xml
+++ b/app/src/main/res/layout/register_step_two_fragment.xml
@@ -17,12 +17,11 @@
             style="@style/TextViewInformation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="160dp"
-            android:layout_marginEnd="48dp"
+            android:layout_marginEnd="32dp"
             android:text="@string/text_did_send_code"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,7 +55,7 @@
             android:id="@+id/group_code_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,8 +112,8 @@
             style="@style/TextViewInformation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
             android:text="@string/did_get_code_question"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/group_code_input" />
@@ -124,8 +123,11 @@
             style="@style/ButtonResendCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
             android:text="@string/button_resend_code"
             app:layout_constraintBottom_toBottomOf="@+id/text_view_did_get_code_question"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/text_view_did_get_code_question"
             app:layout_constraintTop_toTopOf="@+id/text_view_did_get_code_question" />
 
