--- a/app/src/main/res/values/styles_button.xml
+++ b/app/src/main/res/values/styles_button.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="ExtendedFab" parent="Widget.MaterialComponents.Button.TextButton.Icon">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textStyle">normal</item>
+    <style name="ExtendedFab" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:backgroundTint">@color/colorAccent</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAppearance">@style/TextViewExtendedFab</item>
+        <item name="android:elevation">2dp</item>
     </style>
 
     <style name="SwitchSettings" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:typeface">sans</item>
     </style>
 
     <style name="ButtonPickUp" parent="Widget.MaterialComponents.Button">
@@ -24,10 +22,9 @@
     </style>
 
     <style name="ButtonResendCode" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">13sp</item>
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:typeface">sans</item>
     </style>
 
     <style name="ToggleButtonFilter" parent="Theme.MaterialComponents.Light">
