--- a/app/src/main/res/layout/order_route_item.xml
+++ b/app/src/main/res/layout/order_route_item.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/image_view_connection_top"
+        android:id="@+id/image_view_connection_start"
         android:layout_width="8dp"
         android:layout_height="24dp"
         android:layout_marginStart="22dp"
@@ -20,12 +20,12 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/ic_local_taxi_blue_24dp"
-        app:layout_constraintEnd_toEndOf="@+id/image_view_connection_top"
-        app:layout_constraintStart_toStartOf="@+id/image_view_connection_top"
-        app:layout_constraintTop_toBottomOf="@+id/image_view_connection_top" />
+        app:layout_constraintEnd_toEndOf="@+id/image_view_connection_start"
+        app:layout_constraintStart_toStartOf="@+id/image_view_connection_start"
+        app:layout_constraintTop_toBottomOf="@+id/image_view_connection_start" />
 
     <ImageView
-        android:id="@+id/image_view_bottom_connection"
+        android:id="@+id/image_view_connection_end"
         android:layout_width="8dp"
         android:layout_height="0dp"
         android:background="@drawable/connection_rectangle_vertical_start"
@@ -41,12 +41,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        app:layout_constraintStart_toEndOf="@+id/image_view_connection_top"
-        app:layout_constraintTop_toTopOf="@+id/image_view_connection_top"
+        app:layout_constraintStart_toEndOf="@+id/image_view_connection_start"
+        app:layout_constraintTop_toTopOf="@+id/image_view_connection_start"
         tools:text="@tools:sample/lorem" />
 
     <TextView
-        android:id="@+id/text_view_coming_order_is_paid"
+        android:id="@+id/text_view_travel_time"
         style="@style/TextViewTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -59,8 +59,8 @@
         style="@style/TextViewMoneyOnSearchRoute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/text_view_coming_order_is_paid"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_coming_order_is_paid"
+        app:layout_constraintStart_toStartOf="@+id/text_view_travel_time"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_travel_time"
         tools:text="@tools:sample/us_zipcodes" />
 
     <TextView
@@ -74,7 +74,7 @@
         tools:text="@tools:sample/lorem" />
 
     <ImageView
-        android:id="@+id/image_view_arrow"
+        android:id="@+id/image_view_expand_arrow"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginEnd="4dp"
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/divider_bottom"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="40dp"
