--- a/app/src/main/res/layout/coming_order_item.xml
+++ b/app/src/main/res/layout/coming_order_item.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_trip_item"
+    android:id="@+id/card_current_order_Item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -21,12 +21,12 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/text_view_coming_order_is_paid"
+            android:id="@+id/text_view_travel_time"
             style="@style/TextViewLightHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="@string/short_arrival_time"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -37,8 +37,10 @@
             style="@style/TextViewComingOrder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/text_view_coming_order_is_paid"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_coming_order_is_paid"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="@+id/text_view_travel_time"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_travel_time"
             tools:text="@tools:sample/lorem" />
 
         <TextView
@@ -46,28 +48,37 @@
             style="@style/TextViewComingOrder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/text_view_coming_order_is_paid"
+            app:layout_constraintStart_toStartOf="@+id/text_view_from_place"
             app:layout_constraintTop_toBottomOf="@+id/text_view_from_place"
             tools:text="@tools:sample/lorem" />
 
+        <ImageView
+            android:id="@+id/image_view_connection"
+            android:layout_width="4dp"
+            android:layout_height="48dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_to_place"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_from_place"
+            app:layout_constraintStart_toStartOf="@+id/text_view_travel_time"
+            app:layout_constraintTop_toTopOf="@+id/text_view_from_place" />
+
         <View
-            android:id="@+id/divider_search_route_card"
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@android:color/darker_gray"
-            app:layout_constraintBottom_toTopOf="@+id/recycler_view_routes_in_item"
+            app:layout_constraintBottom_toTopOf="@+id/recycler_view_routes"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_view_to_place" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_routes_in_item"
+            android:id="@+id/recycler_view_routes"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:fadingEdge="horizontal"
             android:fadingEdgeLength="30dp"
@@ -78,10 +89,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider_search_route_card" />
+            app:layout_constraintTop_toBottomOf="@+id/divider" />
 
         <TextView
-            android:id="@+id/text_view_search_route_cost"
+            android:id="@+id/text_view_cost"
             style="@style/TextViewMoneyOnSearchRoute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,6 +100,17 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/image_view_expand_arrow"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:rotation="180"
+            android:src="@drawable/ic_expand_less_black_24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recycler_view_routes" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
