--- a/app/src/main/res/layout/order_place_item.xml
+++ b/app/src/main/res/layout/order_place_item.xml
@@ -7,10 +7,11 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/image_view_connection_top"
+        android:id="@+id/image_view_connection_start"
         android:layout_width="8dp"
         android:layout_height="24dp"
         android:layout_marginStart="22dp"
+        android:src="@drawable/connection_rectangle_vertical_end"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,12 +20,12 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:src="@drawable/ic_cloud_circle_black_24dp"
-        app:layout_constraintEnd_toEndOf="@+id/image_view_connection_top"
-        app:layout_constraintStart_toStartOf="@+id/image_view_connection_top"
-        app:layout_constraintTop_toBottomOf="@+id/image_view_connection_top" />
+        app:layout_constraintEnd_toEndOf="@+id/image_view_connection_start"
+        app:layout_constraintStart_toStartOf="@+id/image_view_connection_start"
+        app:layout_constraintTop_toBottomOf="@+id/image_view_connection_start" />
 
     <ImageView
-        android:id="@+id/image_view_connection_bottom"
+        android:id="@+id/image_view_connection_end"
         android:layout_width="8dp"
         android:layout_height="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +56,7 @@
         tools:text="@tools:sample/date/hhmm" />
 
     <View
-        android:id="@+id/divider_bottom"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="40dp"
