--- a/app/src/main/res/layout/coming_order_item.xml
+++ b/app/src/main/res/layout/coming_order_item.xml
@@ -77,7 +77,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_routes"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:fadingEdge="horizontal"
