--- a/app/src/main/res/layout/filter_bottom_sheet.xml
+++ b/app/src/main/res/layout/filter_bottom_sheet.xml
@@ -178,11 +178,12 @@
         app:layout_constraintTop_toBottomOf="@+id/seek_bar_comfort" />
 
     <SeekBar
-        android:id="@+id/seek_bar_duration"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_duration" />
+            android:id="@+id/seek_bar_duration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_duration" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
